<resources>
  <string name="app_name">Tabela Periodica Interativa</string>
  <string name="fragment_details_label">Detalhes do elemento químico</string>
  <string name="hydrogen">Hidrogênio</string>
  <string name="symbol">Símbolo</string>
  <string name="name">Nome</string>
  <string name="atomic_number">Número atômico</string>
  <string name="alkali_metals">Metais alcalinos</string>
  <string name="post_transition_metals">Metais pós-transição</string>
  <string name="diatomic_nonmetals">Não metais diatômicos</string>
  <string name="alkaline_earth_metals">Metais alcalinoterrosos</string>
  <string name="semimetals">Semimetais</string>
  <string name="transition_metals">Metais de transição</string>
  <string name="unknown_chemical_properties">Propriedades químicas desconhecidas</string>
  <string name="noble_gases">Gases nobres</string>
  <string name="polyatomic_nonmetals">Não metais poliatômicos</string>
  <string name="lanthanides">Lantanídeos</string>
  <string name="actinides">Actinídeos</string>
  <string name="label_element_description">Descrição do elemento</string>
  <string name="label_atomic_mass">Massa atômica</string>
  <string name="label_electronegativity">Eletronegatividade</string>
  <string name="label_atomic_radius">Raio atômico</string>
  <string name="label_ionization_energy">Energia de ionização</string>
  <string name="label_electron_affinity">Eletroafinidade</string>
  <string name="label_oxidation_states">Estados de oxidação</string>
  <string name="label_standard_state">Estado padrão</string>
  <string name="label_melting_point">Ponto de fusão</string>
  <string name="label_boiling_point">Ponto de ebulição</string>
  <string name="label_density">Densidade</string>
  <string name="label_electronic_configuration">Configuração eletrônica</string>
  <string name="discovered_in">Descoberto em: %s</string>
  <string name="standard_state_liquid">Estado padrão: líquido</string>
  <string name="standard_state_solid">Estado padrão: sólido</string>
  <string name="standard_state_gas">Estado padrão: gasoso</string>
  <string name="series_alkali_metal">Metal alcalino</string>
  <string name="series_post_transition_metal">Metal pós-transição</string>
  <string name="series_diatomic_nonmetal">Não metal diatômico</string>
  <string name="series_alkaline_earth_metal">Metal alcalinoterroso</string>
  <string name="series_semimetal">Semimetal</string>
  <string name="series_transition_metal">Metal de transição</string>
  <string name="series_unknown_chemical_properties">Propriedades químicas desconhecidas</string>
  <string name="series_noble_gas">Gás nobre</string>
  <string name="series_polyatomic_nonmetal">Não metal poliatômico</string>
  <string name="series_lanthanide">Lantanídeo</string>
  <string name="series_actinide">Actinídeo</string>
  <string name="element_period">Período: %d</string>
  <string name="element_group">Grupo: %d</string>
  <string name="unit_atomic_unit">%s u</string>
  <string name="unit_picometer">%s pm</string>
  <string name="unit_kilojoules_per_mol">%s kJ/mol</string>
  <string name="unit_kilograms_per_meter_cubed">%s kg/m³</string>
  <string name="unit_kelvin">%s K</string>
  <string name="hydrogen_desc">O hidrogênio é um elemento químico com número atômico 1, representado pelo símbolo H. Com uma massa atômica de aproximadamente 1,0 u, o hidrogênio é o elemento menos denso. Ele geralmente apresenta-se em sua forma molecular, formando o gás diatômico (H2) nas condições normais de temperatura e pressão (CNTP). Este gás é inflamável, incolor, inodoro e insolúvel em água. O hidrogênio, por possuir propriedades distintas, não se enquadra claramente em nenhum grupo da tabela periódica, sendo muitas vezes colocado no grupo 1 (anteriormente chamado de 1A) por possuir apenas 1 elétron na camada de valência (ou última camada).</string>
  <string name="helio_desc">O hélio é um elemento químico de símbolo He e que possui massa atómica igual a 4 u, apresentando número atômico 2 (2 prótons e 2 elétrons). Em temperatura ambiente o hélio encontra-se no estado gasoso. Apesar da sua configuração eletrônica ser 1s2, o hélio não figura na tabela periódica dos elementos junto com o hidrogênio no bloco s, está colocado no grupo 18 do bloco p, já que apresenta nível de energia completo, apresentando as propriedades de um gás nobre. Originalmente um gás nobre era considerado incapaz de formar quaisquer compostos químicos, ou seja, inerte (não reage) como os demais elementos. Mas se for submetido a grande pressão (por volta de 300 GPa), juntamente com o sódio, ele formará um novo composto químico. O composto, chamado helida de sódio ou Na2He, é estável em alta pressão e com ligações relativamente fortes. É um gás monoatômico, incolor e inodoro.\nO hélio tem o menor ponto de evaporação de todos os elementos químicos, e só pode ser solidificado sob pressões muito grandes. É o segundo elemento químico em abundância no universo, atrás do hidrogênio, mas na atmosfera terrestre encontram-se apenas traços, provenientes da desintegração de alguns elementos. Em alguns depósitos naturais de gás é encontrado em quantidade suficiente para a sua exploração. O hélio é usado para o enchimento de balões e dirigíveis; como líquido refrigerante de materiais supercondutores criogênicos e como gás engarrafado utilizado em mergulhos de grande profundidade.</string>
  <string name="litio_desc">O lítio é um elemento químico de símbolo Li, número atômico 3 e massa atômica 7, contendo, na sua estrutura, três prótons e três elétrons. Na tabela periódica dos elementos químicos, pertencente ao grupo 1, dos metais alcalinos. Sob condições normais de temperatura e pressão, é o metal mais leve e menos denso entre os elementos sólidos. Como todos os elementos alcalinos, o lítio tem reatividade e inflamabilidade elevada e, por essa razão, é, geralmente, estocado em óleo mineral. Quando é usinado, apresenta brilho, porém, em contato com o ar atmosférico ou na água, a superfície é corroída e adquire a cor cinza-prateada e manchas pretas.\nPor causa da sua elevada reatividade, o lítio não é encontrado em seu estado nativo, sendo encontrado na maioria das vezes na condição de composto químico iônico. O lítio encontra-se em numerosos minerais pegmatitos devido a sua solubilidade iônica e está presente na água marinha, sendo, geralmente, obtido na forma de salmoura e nas argilas. Em escala industrial, o lítio é isolado via eletrólise de uma mistura de cloreto de lítio e cloreto de potássio.\nO lítio e seus compostos têm diversas aplicações industriais, incluindo vidros e cerâmicas com resistência ao calor, ligas com alta força específica resistência-peso utilizadas em aeronaves e baterias de lítio e bateria de íon lítio - mais da metade da produção de lítio é consumida para este fim. Pequenas quantidades de lítio estão presentes em todos os organismos. O elemento possui funções de regulação endócrina, sendo sua deficiência ligada à infertilidade.</string>
  <string name="berilio_desc">O berílio é um elemento químico de símbolo Be, com número atômico 4 (4 prótons e 4 elétrons) e massa atômica 9 u . É um elemento alcalino-terroso, bivalente, tóxico, de coloração cinza, duro, leve, quebradiço e sólido na temperatura ambiente. Pertence ao grupo 2.\nÉ empregado para aumentar a resistência de ligas metálicas (especialmente a de cobre). É empregado para produzir diversos instrumentos (giroscópios), dispositivos (molas de relógios) e em reatores nucleares.\nFoi descoberto pelo francês Louis Nicolas Vauquelin em 1798 na forma de óxido no berilo e na esmeralda. O elemento foi isolado independentemente por Friedrich Wöhler e Antoine Bussy em 1828.\nO uso comercial do berílio requer a utilização de equipamentos de controle adequado do pó e o controle industrial em período contínuo porque a toxicidade da inalação de substâncias que possuem o berílio pode causar uma doença crônica com risco de vida chamada beriliose.</string>
  <string name="boro_desc">O boro é um elemento químico de símbolo B, número atômico 5 (5 prótons e 5 elétrons) com massa atómica 11 u. Ele é exclusivamente produzido pela espalação de raios cósmicos e não pela nucleossíntese estelar e, por esse motivo, é um elemento escasso tanto no sistema solar quanto na crosta terrestre. Concentra-se nas regiões com alta solubilidade hídrica de seus compostos naturais, os boratos. Estes são extraídos industrialmente pelos evaporitos, como o bórax e a kernita. Os maiores depósitos de boro estão na Turquia.\nÉ um elemento inerte, classificado como metaloide, e é encontrado em pequenas amostras em meteoroides, porém não encontrados normalmente na Terra. A produção industrial em seu estado nativo é difícil, tendendo a produzir materiais refratários quando em contato com pequenas quantidades de carbono ou outros elementos químicos. Geralmente os alótropos de boro são amorfos, e o boro é um pó marrom ou cristalino, escurecido, com elevada dureza (aproximadamente 9,5 na escala de Mohs) e com baixa condutividade elétrica em temperatura ambiente. Sua principal aplicação está na produção de filamentos de boro, que são utilizados como um produto similar às fibras de carbono em materiais com alta resistência mecânica, úteis na indústria aeroespacial.\nQuase todo o boro é utilizado na forma de compostos químicos. Metade do consumo mundial dos compostos de boro está na produção de aditivos para fibras de vidro, utilizada em isolamento ou como material estrutural. Seus compostos também são utilizados em grande proporção na produção de polímeros e cerâmicas, cujas estruturas necessitam de elevada relação peso/resistência, e de materiais refratários. O vidro borossilicato é utilizado quando é necessária uma resistência mecânica e a choques térmicos maior que a de vidros produzidos pela cal sodada. Compostos de boro também são usados como fertilizantes na agricultura. Nas aplicações minoritárias, o boro é um importante dopante nos semicondutores, e os reagentes que contém boro são utilizados como intermediários na síntese orgânica fina e nos compostos orgânicos utilizados na indústria farmacêutica (cuja parte dela está em fase de pesquisa ou já é encontrado no mercado?). O boro encontrado na natureza é composto de dois isótopos estáveis, dos quais o boro-10 têm numerosas aplicações como agente de captura de nêutrons.</string>
</resources>